# spacedrive

./: Cargo.toml  pnpm-lock.yaml  tsconfig.json
.github/workflows/: server.yml
apps/desktop/: package.json  tsconfig.json
apps/desktop/crates/linux/: Cargo.toml
apps/desktop/src/: App.tsx  commands.ts  platform.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: package.json  tsconfig.json
apps/web/src/: App.tsx
core/src/p2p/sync/: mod.rs
interface/: ErrorFallback.tsx  index.tsx  package.json  tsconfig.json
interface/app/: index.tsx  route-schemas.ts
interface/app/$libraryId/: 404.tsx  ephemeral.tsx  favorites.tsx  index.tsx  labels.tsx  media.tsx  network.tsx  people.tsx  recents.tsx  useLibraryExplorer.ts
interface/app/$libraryId/Explorer/: index.tsx
interface/app/$libraryId/KeyManager/: index.tsx
interface/app/$libraryId/Layout/: TopBarOptions.tsx  index.tsx  useRedirectToNewLocation.ts
interface/app/$libraryId/PageLayout/: index.tsx
interface/app/$libraryId/Spacedrop/: index.tsx  toast.tsx
interface/app/$libraryId/TopBar/: Layout.tsx  NavigationButtons.tsx  TopBarOptions.tsx  index.tsx
interface/app/$libraryId/debug/: actors.tsx  cloud.tsx  dnd.tsx  sync.tsx
interface/app/$libraryId/location/: $id.tsx  LocationOptions.tsx
interface/app/$libraryId/node/: $id.tsx
interface/app/$libraryId/overview/: DeviceCard.tsx  FileKindStats.tsx  LibraryStats.tsx  LocationCard.tsx  LocationMenu.tsx  NewCard.tsx  PieChart.tsx  StatCard.tsx  index.tsx
interface/app/$libraryId/saved-search/: $id.tsx
interface/app/$libraryId/search/: Filters.tsx  SearchBar.tsx  (+3 more)
interface/app/onboarding/: Layout.tsx  Progress.tsx  alpha.tsx  context.tsx  creating-library.tsx  full-disk.tsx  join-library.tsx  locations.tsx  login.tsx  new-library.tsx  privacy.tsx
interface/components/: AlertDialog.tsx  DismissibleNotice.tsx  DragRegion.tsx  LoginButton.tsx  MultiCheckbox.tsx  SubtleButton.tsx  TrafficLights.tsx  index.ts
interface/locales/ar/: common.json
interface/locales/be/: common.json
interface/locales/de/: common.json
interface/locales/en/: common.json
interface/locales/es/: common.json
interface/locales/fr/: common.json
interface/locales/it/: common.json
interface/locales/ja/: common.json
interface/locales/nl/: common.json
interface/locales/ru/: common.json
interface/locales/tr/: common.json
interface/locales/zh-CN/: common.json
interface/locales/zh-TW/: common.json
(+40 files in other folders)
