[package]
name = "sd-desktop-linux"
version = "0.1.0"
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { workspace = true, features = ["fs"] }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# WARNING: gtk should follow the same version used by tauri
# https://github.com/tauri-apps/tauri/blob/7898b601d14ed62053dd24011fabadf31ec1af45/core/tauri/Cargo.toml#L82
gtk = { version = "0.18", features = [ "v3_24" ] }
